# archerycalculator

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  requirements.txt
archerycalculator/: ExtrasForm.py  HCForm.py  TableForm.py  __init__.py  about.py  api.py  calculator.py  db.py  extras.py  extras_form.py  hc_form.py  info.py  new_field.py  populate_db.py  rounds.py  schema.sql  sight.py  sight_form.py  table_form.py  tables.py  utils.py
archerycalculator/static/: style.css
archerycalculator/templates/: _formhelpers.html  about.html  base.html  calculator.html  classification_tables.html  distances.html  event_tables.html  extras.html  groups.html  handicap_tables.html  home.html  info.html  new_field.html  print_classification_tables.html  print_classification_tables_out.html  rounds.html  roundscomparison.html  tables.html
flaskr/: __init__.py  calculator.py  db.py  form.py  populate_db.py  schema.sql
flaskr/static/: style.css
flaskr/templates/: base.html  calculate.html  home.html  rounds.html
